# unicore-um982-ros2-driver

./: .gitignore  README.md  test_params_launch.py
docs/: 1-PRD-Creation.md  2-Detailed-Plan-Creation.md  3-Agent-Implementation.md  UM982-CONFIG.txt  implementation.md  requirements.md
unicore_um982_driver/: CMakeLists.txt  package.xml
unicore_um982_driver/config/: unicore_driver_params.yaml
unicore_um982_driver/include/unicore_um982_driver/: pvtsln_data.hpp
unicore_um982_driver/launch/: unicore.launch.py
unicore_um982_driver/src/: pvtsln_parser.cpp  unicore_um982_driver_node.cpp
