<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>unicore_um982_driver</name>
  <version>0.0.0</version>
  <description>ROS 2 driver for the Unicore UM982 dual-antenna RTK GPS receiver</description>
  <maintainer email="alford.tyler94@gmail.com">tyler</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>serial_driver</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>diagnostic_updater</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
